ci: set timeout-minutes using ghatm https://github.com/suzuki-shunsuke/batch-bulk-ghatm/issues/1

--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -3,15 +3,18 @@ name: Test
 on: workflow_dispatch
 jobs:
   foo:
+    timeout-minutes: 30
     runs-on: ubuntu-latest
     steps:
       - run: echo hello
   bar:
+    timeout-minutes: 30
     runs-on: ubuntu-latest
     if: "false"
     steps:
       - run: echo bar
   zoo:
+    timeout-minutes: 30
     runs-on: ubuntu-latest
     if: success()
     needs:
